# whisper-gui

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  whisper-gui
src/: lrms_simple.py  ui_loader.py  ui_loader_utils.py  whisper-gui  whisper-gui.py  whisper.py
ui/: job-submitter.ui
